--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="main.css">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>BOUVRET THEO</title>
 </head>
 <header>
+  <nav>
+    <div class="nav">
       <h1>Theo BOUVRET</h1>
+      <ul class="navlist">
+        <!--<li><a href="projets.html"><button>Projets</button></a></li>-->
+      </ul>
+    </div>
+
+  </nav>
 </header>
 
 <body>
-
+<div class="main">
+  <div class="card">
+    <div class="img">
+     <img class="img" src="../colonel.jpg" alt="bg" width="196px" height="196px"/>
+    </div>
+    <div class="info">
       <span>Théo Bouvret</span>
       <p>Etudiant en informatique</p>
+    </div>
+    <a href="https://www.linkedin.com/in/th%C3%A9o-bouvret-4a3674230/">LinkedIN</a>
+  </div>
+</div>
+<div class="mail">
+  <h1>theobouvret2@gmail.com</h1>
+</div>
+
 </body>
 </html>
