--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <div class="main">
   <div class="card">
     <div class="img">
-     <img class="img" src="../colonel.jpg" alt="bg" width="196px" height="196px"/>
+     <!--<img class="img" src="../colonel.jpg" alt="bg" width="196px" height="196px"/>-->
+      <img class="img" src="https://media-exp1.licdn.com/dms/image/C4E03AQFPG8TI7E3i-Q/profile-displayphoto-shrink_400_400/0/1654349574895?e=1672272000&v=beta&t=FR7Mbz5-CSmhufl96I4fheMnx5MJnVK_O7GvcKfwsSQ" alt="bg" width="196px" height="196px"/>
     </div>
     <div class="info">
       <span>Théo Bouvret</span>
