--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
 </div>
 <div class="mail">
-  <h1>theobouvret2@gmail.com</h1>
+  <!--<h1>theobouvret2@gmail.com</h1>-->
 </div>
 
 </body>
